Contains: Cache layer has created by using Redis distributed cache service.

--- a/BookingService.API/BookingService.API.csproj
+++ b/BookingService.API/BookingService.API.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BookingService.Business\BookingService.Business.csproj" />
+    <ProjectReference Include="..\BookingService.Cache\BookingService.Cache.csproj" />
   </ItemGroup>
 
 </Project>
