Contains: Created Appartments repository class with caching options. Decorator design pattern has implemented to combine Redis Caching repository with Appartment repository.

--- a/BookingService.DataAccess/BookingService.DataAccess.csproj
+++ b/BookingService.DataAccess/BookingService.DataAccess.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BookingService.Cache\BookingService.Cache.csproj" />
     <ProjectReference Include="..\BookingService.Entity\BookingService.Entity.csproj" />
   </ItemGroup>
 
